<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_add_plan"
        android:layout_marginTop="30dp"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Добавить план"/>


    <EditText
        android:id="@+id/et_plan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:hint="@string/name"
        android:ems="10"/>

    <EditText
        android:id="@+id/et_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:hint="@string/dateFrom"
        android:ems="10"/>

    <EditText
        android:id="@+id/et_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:hint="@string/dateTo"
        android:ems="10"/>

    <Spinner
        android:id="@+id/select_drone"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="сохранить"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancel"/>
</LinearLayout>