<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/edit_drones_dialog_root"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_user_not_authorized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_not_authorized"
        android:textSize="22sp"
        android:visibility="gone"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"/>


    <TextView
        android:id="@+id/tv_add_drone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_drone"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_drone_model_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="15"
        android:maxEms="15"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_add_drone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_drone_model"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/model"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_drone_serial_number_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="15"
        android:maxEms="15"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_drone_model_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_drone_serial_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/serial_number_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_drone_weight_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="15"
        android:maxEms="15"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_drone_serial_number_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_drone_weight"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/weight_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_drone_weight_layout"
        android:ems="15"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@id/btn_submit"
        android:ems="15"/>


</androidx.constraintlayout.widget.ConstraintLayout>