<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_edit_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textStyle="bold"
        android:textSize="22sp"
        android:visibility="visible"
        android:textColor="@color/black"
        android:padding="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_profile_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:maxEms="20"
        android:minEms="20"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_profile_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_profile_lastname_layout"
        app:layout_constraintTop_toBottomOf="@id/et_profile_name_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:maxEms="20"
        app:startIconDrawable="@drawable/ic_user"
        android:minEms="20"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_lastname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_profile_lastname"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_profile_phone_layout"
        app:layout_constraintTop_toBottomOf="@id/et_profile_lastname_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:maxEms="20"
        app:startIconDrawable="@drawable/ic_phone"
        android:minEms="20"
        android:layout_height="wrap_content"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_profile_phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_profile_birthday_layout"
        app:layout_constraintTop_toBottomOf="@id/et_profile_phone_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:maxEms="20"
        app:startIconDrawable="@drawable/ic_calendar"
        android:minEms="20"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_profile_birthday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/hint_profile_birthday"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_username_layout"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_profile"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:maxEms="20"
        android:visibility="gone"
        app:startIconDrawable="@drawable/ic_user"
        android:minEms="20"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/username"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_layout"
        app:layout_constraintTop_toBottomOf="@id/et_username_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:maxEms="20"
        android:visibility="gone"
        app:startIconDrawable="@drawable/ic_password"
        android:minEms="20"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textVisiblePassword"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_confirm_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_cancel_edit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toTopOf="@+id/btn_log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_log_in"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:text="@string/log_into_account"/>

    <Button
        android:id="@+id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:text="@string/cancel"/>

    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/log_out"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>