<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="5dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/drone_root"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_drone_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drone_model"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:id="@+id/tv_serial_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/serial_number"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/weight"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:paddingStart="10dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>